# UXO-Wizard

./: .gitignore  .gitmodules  MagFull.uxo  QUICKSTART.md  README.md  Tarva_Gamma1.json  UXO_WIZARD_MAP_INTEGRATION_PLAN.md  UXO_WIZARD_MISSION_PLAN.md  check_r_env.py  combined_drone_data_clean.csv  concentration_map_visualization.py  concentrations(in).csv  debug_r_hook.py  env.yaml  gamma.uxo  mag.csv  main.py  notes.txt  requirements.txt  test1.uxo  test_all_layers.uxo  test_basic_map.py  test_layer_system_fix.py
Scripts/: combine_csv_files.py  concentration_map_visualization.py  extract_concentrations_from_json.py  fast_concentration_map.py  flight_anomaly_detector.py  folium_concentration_map.py  quick_flight_viewer.py
Tarva/: concentrations_tarva_clean.csv
Tiller/: concentration_map_tiller_high_clean.html  concentration_map_tiller_low_clean.html  concentrations_tiller_high.csv  (+1 more)
mag/scripts/: README.md  analyze_flight_time.py  environment.yml  flight_path_segmenter.py  grid_interpolator.py  magbase.py  magbase_post.py  magbase_post_copy.py  magnetic_anomaly_detector.py  magnetic_field_processor.py  magvis.py  mdd_to_csv.py  path_interpolate copy.py  path_interpolate.py  pyproject.toml  va_visualize.py  vistest.py  vistestv2 copy.py  vistestv2.py  vistestv2_uniform.py
mag/sgtool-python/: environment.yml  pyproject.toml
mag/sgtool-python/scripts/: run_pipeline.py
mag/sgtool-python/sgtool_py/: __init__.py
mag/sgtool-python/sgtool_py/config/: auto_config.py
mag/sgtool-python/sgtool_py/io/: boundary_masking.py  minimum_curvature.py
mag/sgtool-python/sgtool_py/pipeline/: __init__.py  batch_processor.py
mag/sgtool-python/sgtool_py/visualization/: __init__.py
(+119 files in other folders)
