[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alphashape>=1.3.1",
    "contextily>=1.6.2",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pykrige>=1.7.2",
    "pyproj>=3.7.1",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "utm>=0.8.1",
    "xyzservices>=2025.4.0",
]
