[project]
name = "sgtool-py"
version = "0.1.0"
description = "Python adaptation of SGTool for geophysical processing"
authors = [
    {name = "Aleksander Garbuz", email = "agarbuz@mit.edu"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0", 
    "pandas>=2.0.0",
    "rasterio>=1.3.0",
    "folium>=0.14.0",
    "branca>=0.6.0",
    "scikit-learn>=1.3.0",
    "pykrige>=1.7.0",
    "pywavelets>=1.4.0",
    "matplotlib>=3.7.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "geopandas>=0.13.0",
    "pillow>=9.0.0",
    "pyproj>=3.4.0"
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
numba = [
    "numba>=0.57.0"
]

[project.scripts]
sgtool-py = "sgtool_py.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true